[build-system]
requires = [
    "setuptools>=44,<60; python_version < '3.7'",
    "setuptools>=61.0; python_version >= '3.7'",
]
build-backend = "setuptools.build_meta"

[project]
name = "qtop"
dynamic = ["version"]
description = """
    qtop: the fast text mode way to monitor your cluster's utilization and status;
    the time has come to take back control of your cluster's scheduling business"""
readme = "README.rst"
authors = [
    { name="Sotiris Fragkiskos", email="sfranky@gmail.com"},
    { name="Fotis Georgatos", email="kefalonia@gmail.com"},
]
requires-python = ">=3"

[project.urls]
"Homepage" = "https://github.com/qtop/qtop"

[project.scripts]
qtop = "qtop_py.qtop:main"

[tool.setuptools.dynamic]
version = {attr = "qtop_py.__version__"}

[tool.setuptools]
packages = ["qtop_py"]

[tool.ruff]
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
lint.select = ["E", "F", "I"] ##
lint.ignore = ["E722", "I001"]

# Ruff v0.0.292 cannot target Python 3.6; use its lowest supported target.
target-version = "py37" ##

## FG customisations
line-length = 188 # this is temporary to reduce noise over line lengths

[tool.ruff.per-file-ignores]
"qtop_py/plugins/oar.py" = ["F401"]
"qtop_py/plugins/sge.py" = ["F401", "F841"]
"qtop_py/qtop.py" = ["E402", "F401", "F403", "F405", "F841"]
"qtop_py/serialiser.py" = ["F401"]
"qtop_py/utils.py" = ["F403"]
"tests/test_qtop.py" = ["F401", "F841"]
"tests/test_yaml_parser.py" = ["F401"]
"tests/ui/test_viewport.py" = ["F811"]
